First Content update with website products

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <!-- googlefont -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Open+Sans&family=Roboto+Slab:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -33,27 +34,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#AboutOrg">About</a>
+            <a class="nav-link" href="#AboutOrg">Chương Trình</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#MockTest">Learning</a  >
+            <a class="nav-link" href="#ScreeningPrep">Khóa Học</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Contact">Contact</a>
+            <a class="nav-link" href="#Contact">Liên Hệ</a>
           </li>
         </ul>
       </div>
     </nav>
   </section>
 
-  <section id="AboutOrg" class=" text-light DarkSection">
+  <section id="AboutOrg" class="text-light DarkSection">
     <div class="row">
       <div class="col-lg-6 IntroCol">
-        <h1>Find opportunities to <u class="YellowText">kickstart </u> <br /> your careers.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        <button type="button" class="download-button btn btn-outline-warning btn-lg"><i class="fa fa-book" aria-hidden="true"></i> Take The Test</button>
-        <button type="button" class="download-button btn btn-outline-light btn-lg"><i class="fa fa-info-circle" aria-hidden="true"></i> Find Out More</button>
+        <h1>Nền tảng đào tạo <u class="YellowText">tài năng trẻ </u> <br />cho các tập đoàn đa quốc gia.</h1>
+        <p>The Trainee Club cung cấp đầy đủ kiến thức và kĩ năng giúp học viên ứng tuyển vào các chương trình Tài năng trẻ của các tập đoàn lớn trên thế giới (Management Trainee, Graduate Program, Young Talent Program,...)</p>
+
+        <button type="button" class="download-button btn btn-outline-light btn-lg"><i class="fa fa-info-circle" aria-hidden="true"></i>Tìm Hiểu Sản Phẩm</button>
       </div>
       <div class="col-lg-6 CoverCol">
       </div>
@@ -61,112 +61,165 @@
     </div>
   </section>
 
-  <section id="AboutAuth" class="bg-light text-dark">
-    <div class="MajorText">
-      <img src="images/head4.jpg" class="round-img">
-      <h2 class="BlueText">Edward Tran</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <section id="HallOfFame" class="bg-light text-dark">
+    <div class="container-fluid MajorText">
+      <h1>Hall Of Fame</h1>
+      <div id="carouseltestimonial" class="carousel slide" data-ride="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <img class="round-img" src="images/head1.jpg" alt="dog-profile">
+            <br>
+            <em>Student, Position</em>
+          </div>
+
+          <div class="carousel-item">
+            <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <img class="round-img" src="images/head2.jpg" alt="lady-profile">
+            <br>
+            <em>Student, Position</em>
+          </div>
+          <div class="carousel-item">
+            <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <img class="round-img" src="images/head3.jpg" alt="lady-profile">
+            <br>
+            <em>Student, Position</em>
+          </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouseltestimonial" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+
+        <a class="carousel-control-next" href="#carouseltestimonial" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
   </section>
 
-  <section id="MockTest" class=" text-light DarkSection">
+  <section id="ScreeningPrep" class="DarkSection text-light">
     <div class="container-fluid MajorText">
-      <h1 class=""> Trainee Test</h1>
+      <h1 class=""> 1. Screening Prep</h1>
+      <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="row equal">
+        <div class="col-lg-4">
+          <i class="feature-icon fas fa-check-circle fa-4x"></i>
+          <br>
+          <h2>Resume Preparation</h2>
+          <p>Sửa nội dung và cách trình bày Resume theo chuẩn quốc tế.</p>
+          <p class="align-bottom">200,000đ</p>
+        </div>
+
+        <div class="col-lg-4">
+          <i class="feature-icon fas fa-bullseye fa-4x"></i>
+          <br>
+          <h2>Online Aptitude Test</h2>
+          <p>Bài kiểm tra tổng hợp với 3 đề: Verbal, Numerical và Logical.</p>
+          <p class="align-items-end">300,000đ</p>
+        </div>
+
+        <div class="col-lg-4">
+          <i class="feature-icon fas fa-check-circle fa-4x"></i>
+          <br>
+          <h2>Online Video Assessment</h2>
+          <p>Đơn vị duy nhất cung cấp nền tảng để bạn luyện tập Online Video Interview với feedbacks cụ thể về cả câu trả lời lẫn hình ảnh.</p>
+          <p class="align-items-end">300,000đ</p>
+        </div>
+      </div>
+
+      <p>Bundle: 500,000đ</p>
+      <button type="button" class="download-button btn btn-outline-warning btn-lg"><i class="fa fa-book" aria-hidden="true"></i> Đăng Ký Ngay!</button>
+    </div>
+  </section>
+
+  <section id="FoundationClass" class="bg-light text-dark">
+    <div class="container-fluid MajorText">
+      <h1 class="">2. Foundation Class</h1>
+      <p class="font-italic">Học phí: 2,800,000 VND/6 buổi Online</p>
+      <table class="table table-borderless text-left">
+        <tr class=>
+          <th scope="row"> Buổi 1 </th>
+          <td> 1. Kĩ năng viết Resume/CV <br /> 2. Phương pháp chuẩn bị cho Behavioral Interview</td>
+        </tr>
+        <tr>
+          <th scope="row"> Buổi 2</th>
+          <td>1. Phân loại các dạng case và lý thuyết về giải case cho từng dạng <br> 2. Thực hành Decision-based case</td>
+        </tr>
+        <tr>
+          <th scope="row"> Buổi 3</th>
+          <td>1. Các framework cơ bản trong giải case <br> 2. Thực hành Evaluation case</td>
+        </tr>
+        <tr>
+          <th scope="row"> Buổi 4</th>
+          <td>1. Thực hành Problem Dianogsis case <br> 2. Các tips trong Group case interview</td>
+        </tr>
+        <tr>
+          <th scope="row"> Buổi 5</th>
+          <td>Assessment Center Simulation</td>
+        </tr>
+        <tr>
+          <th scope="row"> Buổi 6</th>
+          <td>1. Phương pháp và nội dung cần chuẩn bị cho Final Interview <br> 2. Tips để vượt qua vòng Final Interview</td>
+        </tr>
+      </table>
+
+      <h2>Ưu Đãi</h2>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3>Học Cùng Đồng Đội</h3>
+          <p>Nhóm 2 người sẽ được giảm 10%, Nhóm 3 người sẽ được giảm 15%</p>
+        </div>
+        <div class="col-lg-6">
+          <h3>Chia Sẻ Khóa Học</h3>
+          <p>Giảm thêm 5% khi chia sẻ thông tin khóa học public trên facebook cá nhân kèm hashtag #traineefoundation và #thetraineeclub</p>
+        </div>
+      </div>
+      <button type="button" class="BlueText btn btn-light btn-outline-dark btn-lg"><i class="fa fa-rocket" aria-hidden="true"></i> Đăng Ký Ngay!</button>
+    </div>
+  </section>
+
+  <section id="PrivateCoaching" class="text-light DarkSection">
+    <div class="container-fluid MajorText">
+      <h1>3. Private Coaching</h1>
+      <p class="font-italic">Chỉ dành riêng cho các bạn đã vào đến vòng Assessment Center/Final Interview</p>
       <div class="row">
         <div class="col-lg-6">
           <i class="feature-icon fas fa-check-circle fa-4x"></i>
           <br>
-          <h2>Multiple Choice</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3 class="">Ace Assessment Center</h3>
+          <p>1. Giải case với feedback 1-1 <br> 2. Tips cho Group case Interview</p>
         </div>
-
         <div class="col-lg-6">
-          <i class="feature-icon fas fa-bullseye fa-4x"></i>
-          <br>
-          <h2>Video Assessment</h2>
-          <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        </div>
-      </div>
-      <button type="button" class="download-button btn btn-outline-warning btn-lg"><i class="fa fa-book" aria-hidden="true"></i> Take The Test</button>
-    </div>
-  </section>
-
-  <section id="TraineeClass" class="bg-light text-dark">
-    <div class="container-fluid MajorText">
-      <h1 class="BlueText">Trainee Class</h1>
-
-      <div class="row">
-        <div class="col-lg-4">
-          <i class="BlueText feature-icon fas fa-check-circle fa-4x"></i>
-          <br>
-          <h3 class="BlueText">Easy To Use.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-
-        <div class="col-lg-4 ">
           <i class=" YellowText feature-icon fas fa-bullseye fa-4x"></i>
           <br>
-          <h3 class="BlueText">Elite Clientele. </h3>
-          <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        </div>
-
-        <div class="feature-col col-lg-4">
-          <i class="BlueText feature-icon fas fa-heart fa-4x"></i>
-          <br>
-          <h3 class="BlueText">Work Always.</h3>
-          <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <h3 class="">Shine in Final Interview</h3>
+          <p>1. Phương pháp và nội dung cần chuẩn bị cho Final Interview <br>2. Tips để vượt qua vòng Final Interview</p>
         </div>
       </div>
-      <button type="button" class="BlueText btn btn-light btn-outline-dark btn-lg"><i class="fa fa-rocket" aria-hidden="true"></i> Enroll Now</button>
+      <button type="button" class="download-button btn btn-outline-warning btn-lg"><i class="fa fa-book" aria-hidden="true"></i> Đăng Ký Ngay!</button>
     </div>
   </section>
 
-  <section id="Testimonial" class="DarkSection text-light">
-    <div id="carouseltestimonial" class="carousel slide MajorText" data-ride="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img class="round-img" src="images/head1.jpg" alt="dog-profile">
-          <br>
-          <em>Student, Position</em>
-        </div>
-
-        <div class="carousel-item">
-          <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img class="round-img" src="images/head2.jpg" alt="lady-profile">
-          <br>
-          <em>Student, Position</em>
-        </div>
-        <div class="carousel-item">
-          <p class="font-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <img class="round-img" src="images/head3.jpg" alt="lady-profile">
-          <br>
-          <em>Student, Position</em>
-        </div>
-      </div>
-
-      <a class="carousel-control-prev" href="#carouseltestimonial" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-
-      <a class="carousel-control-next" href="#carouseltestimonial" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+  <section id="AboutAuth" class="bg-light text-dark">
+    <div class="MajorText">
+      <img src="images/head4.jpg" class="round-img">
+      <h2 class="BlueText">Trần Ngọc Sơn (Edward)</h2>
+      <p>Sơn từng tham gia chương trình Global Management Trainee của AB Inbev (Công ty Bia lớn nhất thế giới) khóa 2019 và hiện đang là Jardine Executive Trainee của Jardine Matheson (Tập đoàn đa ngành hàng đầu tại Châu Á)</p>
     </div>
   </section>
 
-  <section id="Contact" class="bg-light text-dark">
+  <section id="Contact" class="DarkSection text-light">
     <div class="MajorText">
       <h1> Get In Touch </h1>
       <p> We are eager to learn how we can help you achieve your dream careeer. Join our growing community of dreamer on social media. Or reach us directly with your questions. </p>
       <p><i class="fa fa-phone-square BlueText" aria-hidden="true"></i> 123-456-7890</p>
-      <a href="http://google.com" class="btn btn-link BlueText btn-lg"> <i class="fa fa-envelope  " aria-hidden="true"></i> </a>
-      <a href="http://google.com" class="btn btn-link BlueText btn-lg"> <i class="fab fa-twitter"></i> </a>
-      <a href="http://google.com" class="btn btn-link BlueText btn-lg"> <i class="fab fa-facebook-f"></i> </a>
-      <a href="http://google.com" class="btn btn-link BlueText btn-lg"> <i class="fab fa-instagram"></i> </a>
+      <a href="http://google.com" class="btn btn-link YellowText btn-lg"> <i class="fa fa-envelope  " aria-hidden="true"></i> </a>
+      <a href="http://google.com" class="btn btn-link YellowText btn-lg"> <i class="fab fa-twitter"></i> </a>
+      <a href="http://google.com" class="btn btn-link YellowText btn-lg"> <i class="fab fa-facebook-f"></i> </a>
+      <a href="http://google.com" class="btn btn-link YellowText btn-lg"> <i class="fab fa-instagram"></i> </a>
 
     </div>
 
